--- a/apps/react-ts-ecommerce-app/package.json
+++ b/apps/react-ts-ecommerce-app/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-ts-ecommerce-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 8080",
     "test": "vitest",
     "lint": "eslint --ext .js,.cjs,.ts,.tsx .",
     "lint:fix": "eslint --ext .js,.cjs,.ts,.tsx . --fix",
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -35,7 +36,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.31",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.5",
     "typescript": "<5.1.0",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
